# StockAnalysis

./: .gitignore  Crawler_BrokerList.py  Dockerfile  README.md  architecture.key  broker_list.csv  commands  daily.md  data-flow.drawio  pyproject.toml
.ipynb_checkpoints/: Crawler_InstitutionalInvestors-checkpoint.ipynb
conf/: default.properties
notebooks/: Analysis_BollingerBandAlert.ipynb  Analysis_OneNightTrading.ipynb  Analysis_RealTimeDetectBBandSign.ipynb  Analysis_TrendVisualization.ipynb  Analysis_WarrantKeyInvestor.ipynb  Crawler_BrokerList.ipynb  Crawler_DailyTransactionData.ipynb  Crawler_DividendInfo.ipynb  Crawler_FutureList.ipynb  Crawler_InstitutionalInvestorConference.ipynb  Crawler_InstitutionalInvestorData.ipynb  Crawler_InstitutionalInvestorsData.ipynb  Crawler_RealTimeStockPriceData.ipynb  Crawler_StockList.ipynb  Crawler_WangGooBuySellReport.ipynb  Crawler_WarrantDailyInfo.ipynb  Crawler_WarrantList.ipynb  ETL_AggDataByStock.ipynb  ETL_DailyTransactionData.ipynb  KeyInvestorDetection.ipynb  Notification_DividendInfo.ipynb  Notification_InstitutionalInvestorConference.ipynb  SemiAutoRecaptcha.ipynb  brokerList.csv  response.xls  warrant_key_buyer.csv
pyfiles/: Analysis_KeyInvestorDetection.py  Analysis_OneNightTrading.py  Analysis_RealTimeDetectBbandSign.py  Analysis_WarrantKeyInvestor.py  CommonLib.py  Crawler_BrokerList.py  Crawler_DailyDividendInfo.py  Crawler_DailyTransactionInfo.py  Crawler_DividendInfo.py  Crawler_FutureList.py  Crawler_HistoricalDividendInfo.py  Crawler_InstitutionalInvestorConference.py  Crawler_StockList.py  Text2Img.py  (+9 more)
(+27 files in other folders)
